加入设计模式 1.策略模式

--- a/src/config.properties
+++ b/src/config.properties
@@ -1,2 +1,7 @@
 
-initTank = 3
+initTank = 6
+tankSpeed = 5
+gameHeight = 720
+gameWidth = 1080
+goodFS=com.zhy.tank.FourDirFireStrategy
+badFS=com.zhy.tank.DefaultFireStrategy
