--- a/src/config.properties
+++ b/src/config.properties
@@ -5,3 +5,4 @@ gameHeight = 720
 gameWidth = 1080
 goodFS=com.zhy.tank.FourDirFireStrategy
 badFS=com.zhy.tank.DefaultFireStrategy
+colliders = com.zhy.tank.cor.BulletTankCollider,com.zhy.tank.cor.TankTankCollider
