重构代码: 加入wall,添加新的责任链,检查墙相撞 使用gm为一个单例

--- a/src/config.properties
+++ b/src/config.properties
@@ -5,4 +5,4 @@ gameHeight = 720
 gameWidth = 1080
 goodFS=com.zhy.tank.FourDirFireStrategy
 badFS=com.zhy.tank.DefaultFireStrategy
-colliders = com.zhy.tank.cor.BulletTankCollider,com.zhy.tank.cor.TankTankCollider
+colliders = com.zhy.tank.cor.BulletTankCollider,com.zhy.tank.cor.TankTankCollider,com.zhy.tank.cor.BulletWallCollider,com.zhy.tank.cor.TankWallCollider
